Test runner v0.0.1 working

--- a/client/views/selector.html
+++ b/client/views/selector.html
@@ -10,6 +10,12 @@
     <label for="url">URL</label>
     <input type="url" name="url" value="http://localhost:3000">
     
+    <label for="iterations">Iterations</label>
+    <input type="text" name="iterations">
+
+    <label for="over">Over (seconds)</label>
+    <input type="text" name="over">
+    
     <button class="go">GO!</button>
   </form>
 </template>
