--- a/client/views/selector.html
+++ b/client/views/selector.html
@@ -1,5 +1,8 @@
 <template name="selector">
   <form>
+    <label for="name">Run Name</label>
+    <input type="text" name="name">
+    
     <label for="test">Test Name</label>
     <select name="test">
       {{#each tests}}
