--- a/client/views/selector.html
+++ b/client/views/selector.html
@@ -20,5 +20,6 @@
     <input type="text" name="over">
     
     <button class="go">GO!</button>
+    <button class="reset">Reset</button>
   </form>
 </template>
