--- a/client/views/selector.html
+++ b/client/views/selector.html
@@ -3,13 +3,21 @@
     <label for="name">Run Name</label>
     <input type="text" name="name">
     
+    <label for="environment">Environment</label>
+    <select name="environment">
+        <option>None</option>
+      {{#each environments}}
+        <option value="{{name}}">{{name}}</option>
+      {{/each}}
+    </select>
+      
     <label for="test">Test Name</label>
     <select name="test">
       {{#each tests}}
         <option value="{{name}}">{{name}}</option>
       {{/each}}
     </select>
-      
+
     <label for="url">URL</label>
     <input type="url" name="url" value="http://localhost:3000">
     
