Added a little more logging and taking the 10’th runTime as the benchmark

--- a/client/templates/results-show.html
+++ b/client/templates/results-show.html
@@ -1,4 +1,5 @@
 <template name="resultsShow">
+  <a href="/">Home</a>
   <h1>Result from {{formatDate createdAt}}</h1>
   <h2>For test: {{test.name}} [subbing to '{{test.publication}}']</h2>
 </template>
